--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-        <string>hocicos-curiosos-app</string>
+	<string>hocicos-curiosos-app</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -22,6 +22,16 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<string>YES</string>
+	<key>NSCameraUsageDescription</key>
+	<string>To take photos of your pet</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>To add the photos of your pet to your library</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To add photos of your pet from your library</string>
+	<key>UIFileSharingEnabled</key>
+	<string>YES</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
