--- a/package.json
+++ b/package.json
@@ -17,22 +17,29 @@
   "dependencies": {
     "@capacitor/android": "^5.6.0",
     "@capacitor/app": "5.0.6",
+    "@capacitor/camera": "^5.0.9",
     "@capacitor/core": "5.6.0",
+    "@capacitor/filesystem": "^5.2.1",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "^5.6.0",
     "@capacitor/keyboard": "5.0.7",
+    "@capacitor/preferences": "^5.0.7",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic/pwa-elements": "^3.2.2",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
     "@ionic/storage": "^4.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "animate.css": "^4.1.1",
     "cordova-sqlite-storage": "^6.1.0",
     "i18next": "^23.8.2",
     "ionicons": "^7.0.0",
     "localforage-cordovasqlitedriver": "^1.8.0",
+    "lodash.difference": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.0",
     "react-i18next": "^14.0.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
@@ -45,12 +52,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/lodash.difference": "^4.5.9",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.17",
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^9.1.0",
@@ -61,7 +70,10 @@
     "husky": "^9.0.10",
     "jsdom": "^22.1.0",
     "lint-staged": "^15.2.1",
+    "postcss": "^8.4.34",
     "prettier": "^3.2.4",
+    "sass": "^1.70.0",
+    "tailwindcss": "^3.4.1",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
     "vite": "^5.0.0",
