--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-hook-form": "^7.50.0",
     "react-i18next": "^14.0.1",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@capacitor/cli": "5.6.0",
