--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash.difference": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-hook-form": "^7.50.0",
     "react-i18next": "^14.0.1",
     "react-router": "^5.3.4",
