--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "ionicons": "^7.0.0",
     "localforage-cordovasqlitedriver": "^1.8.0",
     "lodash.difference": "^4.5.0",
+    "oidc-client-ts": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-hook-form": "^7.50.0",
     "react-i18next": "^14.0.1",
+    "react-oidc-context": "^3.0.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "swiper": "^11.0.6"
