--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "format": "prettier --write ./*.{ts,json} ./src/*.{ts,tsx} ./src/**/*.{ts,tsx}",
     "lint": "eslint --fix ./*.ts ./src/*.{ts,tsx} ./src/**/*.{ts,tsx}",
     "lint-staged": "lint-staged",
+    "compile": "rimraf ./src/__generated__ && graphql-codegen",
+    "watch": "rimraf ./src/__generated__ && graphql-codegen -w",
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "@capacitor/android": "^5.6.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.9",
@@ -33,6 +36,7 @@
     "@types/react-router-dom": "^5.3.3",
     "animate.css": "^4.1.1",
     "cordova-sqlite-storage": "^6.1.0",
+    "graphql": "^16.8.1",
     "i18next": "^23.8.2",
     "ionicons": "^7.0.0",
     "localforage-cordovasqlitedriver": "^1.8.0",
@@ -52,6 +56,9 @@
     "@capacitor/cli": "5.6.0",
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/client-preset": "^4.2.2",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -76,6 +83,7 @@
     "lint-staged": "^15.2.1",
     "postcss": "^8.4.34",
     "prettier": "^3.2.4",
+    "rimraf": "^5.0.5",
     "sass": "^1.70.0",
     "tailwindcss": "^3.4.1",
     "terser": "^5.4.0",
