--- a/environments/.env
+++ b/environments/.env
@@ -1,6 +1,7 @@
-VITE_OIDC_AUTHORITY=""
-VITE_OIDC_REDIRECT_URI=""
-VITE_OIDC_CLIENT_ID=""
-VITE_OIDC_RESPONSE_TYPE=""
-VITE_OIDC_SCOPE=""
-VITE_OIDC_CLIENT_SECRET=""
+VITE_OIDC_AUTHORITY=
+VITE_OIDC_REDIRECT_URI=
+VITE_OIDC_CLIENT_ID=
+VITE_OIDC_RESPONSE_TYPE=
+VITE_OIDC_SCOPE=
+VITE_OIDC_CLIENT_SECRET=
+VITE_GRAPHQL_SCHEMA_URL=
