fix: solve build issue renaming local path
The local graphql path generates conflicts with the graphql package path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
     "paths": {
       "@components": ["components/index.ts"],
       "@components/*": ["components/*"],
+      "@graphql-api": ["graphql-api/index.ts"],
+      "@graphql-api/*": ["graphql-api/*"],
       "@hooks": ["hooks/index.ts"],
       "@hooks/*": ["hooks/*"],
       "@layouts": ["layouts/index.ts"],
