--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "predev": "npx dotenvx run --env-file=./environments/.env.local -- npm run generate",
     "dev": "vite",
+    "prebuild": "npx dotenvx run --env-file=./environments/.env.production --env-file=.env -- npm run generate",
     "build": "tsc && vite build",
+    "prepreview": "npx dotenvx run --env-file=./environments/.env.local -- npm run generate",
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
     "format": "prettier --write ./*.{ts,json} ./src/*.{ts,tsx} ./src/**/*.{ts,tsx}",
     "lint": "eslint --fix ./*.ts ./src/*.{ts,tsx} ./src/**/*.{ts,tsx}",
     "lint-staged": "lint-staged",
-    "compile": "rimraf ./__generated__ && graphql-codegen --config ./src/codegen.ts",
-    "watch": "rimraf ./__generated__ && graphql-codegen --watch --config ./src/codegen.ts",
+    "generate": "rimraf ./__generated__ && graphql-codegen --config ./src/codegen.ts",
+    "generate:local": "rimraf ./__generated__ && npx dotenvx run --env-file=./environments/.env.local -- graphql-codegen --config ./src/codegen.ts",
+    "generate:watch": "rimraf ./__generated__ && graphql-codegen --config ./src/codegen.ts --watch",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -57,8 +61,9 @@
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
     "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-codegen/client-preset": "^4.2.2",
+    "@graphql-codegen/client-preset": "^4.2.4",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@parcel/watcher": "^2.4.1",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -72,6 +77,7 @@
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.17",
     "cypress": "^13.5.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
